# ll-chain

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
docs/: design.md
openspec/: config.yaml
openspec/changes/archive/2026-03-01-simplify-agent-interaction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-01-simplify-agent-interaction/specs/ll-run-skill/: spec.md
openspec/changes/archive/2026-03-03-add-ll-ff-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-fix-schema-loading-paths/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-flows-user-schemas-and-stage-instruction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-improve-ll-run-ux/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-simplify-stage-status/: design.md  proposal.md  tasks.md
src/ll_chain/: __init__.py  cli.py  constants.py
src/ll_chain/commands/: create.py  flows.py  init_cmd.py  list_cmd.py  stage.py  status.py  update.py
src/ll_chain/core/: context.py  dag.py  schema_resolver.py
src/ll_chain/models/: config.py  schema.py  task.py
src/ll_chain/templates/: __init__.py  code-review.yaml  ll-create.md  ll-ff.md  ll-run.md
src/ll_chain/utils/: output.py  yaml_io.py
tests/: test_templates.py
tests/commands/: test_create_instruction.py  test_flows.py  test_init_cmd.py  test_status.py
tests/core/: test_context_prompts.py  test_dag.py  test_schema_resolver.py
tests/models/: test_task_instruction.py
(+7 files in other folders)
